tests/core/exparseIds.test
====================================================================================================
# Identifiers
====================================================================================================
----------------------------------------------------------------------------------------------------

foo

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Id name="foo"/>

----------------------------------------------------------------------------------------------------

$

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Id name="$"/>

----------------------------------------------------------------------------------------------------

¢

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Id name="¢"/>

----------------------------------------------------------------------------------------------------

£

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Id name="£"/>

----------------------------------------------------------------------------------------------------

€

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Id name="€"/>

----------------------------------------------------------------------------------------------------

 %

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Id name="%"/>
 
====================================================================================================
Symbols must stand alone, not part of identifiers.
====================================================================================================
----------------------------------------------------------------------------------------------------

a$

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

Exception: Syntax error
<no file>, line 1
    { a$}
      ^

====================================================================================================
Unrecognized Unicode characters
====================================================================================================
----------------------------------------------------------------------------------------------------

º

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

Exception: Invalid syntax
<no file>, line 1
    { º}
      ^

----------------------------------------------------------------------------------------------------
